@@ -1,3 +1,9 @@
+2014-03-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* include/avr/iom256rfr2.h (PCMSK0_struct): Add missing definition
+	* include/avr/imo128rfr2.h (PCMSK0_struct): (Dito.)
+	* include/avr/iom64rfr2.h (PCMSK0_struct): (Dito.)
+
 2014-03-18  Pitchumani Sivanupandi <pitchumani.s@atmel.com>
 
 	Submitted by Vishnu KS
